fix: export direct buffer access to test worker JVMs